--- a/dev_src/html_page.html
+++ b/dev_src/html_page.html
@@ -243,7 +243,8 @@
 
 
 	<!-- <link rel="stylesheet" href="https://raw.githack.com/RaSan147/pyrobox/main/assets/video.css" /> -->
-	<link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
+	<link rel="stylesheet" href="/@assets/video.css" />
+	<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" /> -->
 
 </body>
 
