--- a/dev_src/html_page.html
+++ b/dev_src/html_page.html
@@ -137,7 +137,7 @@
 	</div>
 
 
-	<div id="actions-btn" class="disable_selection jsonly" onclick="page.on_action_button()">
+	<div id="actions-btn" class="disable_selection jsonly" onclick="page_controller.on_action_button()">
 		<div id="actions-btn-text">More&nbsp;</div>
 		<span class="fa fa-solid fa-plus" id="actions-btn-icon"><b>+</b></span>
 		<span class="fa fa-duotone fa-spinner fa-spin" id="actions-loading-icon"><span class='spin'>⚉</span></span>
